# vera

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tests/: test_vera.py
vera/: __init__.py  cli.py  db.py  export.py  server.py  types.py
vera/web/: app.js  index.html  style.css
