[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vera"
version = "0.1.0"
description = "Verified Evidence Record and Annotations - track DFIR investigations as a replayable graph of commands and findings"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
vera = "vera.cli:main"

[tool.setuptools.packages.find]
include = ["vera*"]

[tool.setuptools.package-data]
vera = ["web/*"]
